API Documentation updated
