# routes/user.js
@@ -4,19 +4,19 @@ const routes = express.Router();
 const usersController = require("../controllers/usersController.js");
 
 // Retrieve all published Users
-routes.get('/users', usersController.getAllUsers);
+routes.get('/', usersController.getAllUsers);
 
 // Retrieve a single User with id
-routes.get('/users/:id', usersController.getSingleUser);
+routes.get('/:id', usersController.getSingleUser);
 
 // Create a new User
-routes.post('/users', usersController.createUser);
+routes.post('/', usersController.createUser);
 
 // Update a User with id
-routes.put('/users/:id', usersController.updateUser);
+routes.put('/:id', usersController.updateUser);
 
 // Delete a User with id
-routes.delete('/users/:id', usersController.deleteUser);
+routes.delete('/:id', usersController.deleteUser);
 
 
 module.exports = routes;
